rust/macros/tests/invalid/target/debug/deps/missing_argument-b4d782c960af20c0.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/missing_argument-b4d782c960af20c0.d: missing_argument.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libmissing_argument-b4d782c960af20c0.rmeta: missing_argument.rs Cargo.toml

missing_argument.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
